Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-09-27 (SVN):
    * keys.c: fixes to clipboard text paste code. also moved it into new
      PasteToConsole() helper procedure.

2012-09-27 (SVN):
    * updated version date stamp to 2012-09-27.

2012-09-22 (SVN):
    * host_cmd.c (RestoreClients): For clients_mode 3, do not apply any
      time diffs. mode 3 is only in response to the single player game
     "restart restore" command issued by progs.dat::client.hc::respawn()
      function.  No level change, just respawning in the same map with
      the same playtime from when clients.gip was saved, therefore there
      CANNOT be a time_diff there.  Fixes bug #2176023, a.k.a. deathbug.
    * updated version date stamp to 2012-09-22. updated docs/BUGS.

2012-09-19 (SVN):
    * h2ded, dos: don't include the serial driver
    * oslibs/dos: recompiled watt32 library without USE_TCP_MD5 option.
      currently, watt32 doesn't even check with the result returned by
      check_md5_signature(), therefore it was only an additional useless
      burden.

2012-09-19 (SVN):
    * h2patch: remove the md5 dependency,use the adler32 routine already
      present in xdelta3. do not recalculate and compare the checksum if
      xdelta3 reports success for a patch. when an already patched file
      is encountered, do not error out if its checksum doesn't match but
      only emit a warning. in dos builds, use XD3_POSIX for file i/o.
    * h2launcher: apply the relevant changes from h2patch.
    * libs/xdelta3: add new xd3_calc_adler32() helper to xdelta3-main.h.
      removed the unused file flags.
    * libs/md5: move, no longer needed.
    * updated version date stamp to 2012-09-19.

2012-09-17 (SVN):
    * utils, hcc: corrected the -old option description.

2012-09-17 (SVN):
    * amiga, Sys_FindFirstFile(): unlock the lock created for path in
      Sys_FindClose().
    * updated version date stamp to 2012-09-17.

2012-09-16 (SVN):