@@ -812,8 +812,7 @@ void IN_Commands (void)
 void IN_SendKeyEvents (void)
 {
 	SDL_Event event;
-	int sym, state;
-	int modstate;
+	int sym, usym, state, modstate;
 	qboolean gamekey;
 
 	gamekey = (key_dest == key_game || m_keys_bind_grab);
@@ -866,19 +865,19 @@ void IN_SendKeyEvents (void)
 			switch (key_dest)
 			{
 			case key_game:
-				if ((event.key.keysym.unicode != 0) || (modstate & KMOD_SHIFT))
+				if (event.key.keysym.unicode != 0/* || modstate & KMOD_SHIFT*/)
 				{	/* only use unicode for ~ and ` in game mode */
 					if ((event.key.keysym.unicode & 0xFF80) == 0)
 					{
-						if (((event.key.keysym.unicode & 0x7F) == '`') ||
-						    ((event.key.keysym.unicode & 0x7F) == '~') )
-							sym = event.key.keysym.unicode & 0x7F;
+						usym = event.key.keysym.unicode & 0x7F;
+						if (usym == '`' || usym == '~')
+							sym = usym;
 					}
 				}
 				break;
 			case key_message:
 			case key_console:
-				if ((event.key.keysym.unicode != 0) || (modstate & KMOD_SHIFT))
+				if (event.key.keysym.unicode != 0/* || modstate & KMOD_SHIFT*/)
 				{
 #if defined(__APPLE__) && defined(__MACH__)
 					if (sym == SDLK_BACKSPACE)
@@ -889,7 +888,17 @@ void IN_SendKeyEvents (void)
 						break;	/* S.A: fixes QNX weirdness */
 #endif	/* __QNX__ */
 					if ((event.key.keysym.unicode & 0xFF80) == 0)
-						sym = event.key.keysym.unicode & 0x7F;
+					{
+						usym = event.key.keysym.unicode & 0x7F;
+						if (modstate & KMOD_CTRL && usym < 32 && sym >= 32)
+						{
+							/* control characters */
+							if (modstate & KMOD_SHIFT)
+								usym += 64;
+							else	usym += 96;
+						}
+						sym = usym;
+					}
 					/* else: it's an international character */
 				}
 			/*	printf("You pressed %s (%d) (%c)\n", SDL_GetKeyName(sym), sym, sym);*/
